// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutrageParserService parseMessage should return parsed message 1`] = `
{
  "date": 2024-06-24T21:00:00.000Z,
  "region": "cherkasy",
  "shifts": [
    {
      "end": 2024-06-24T22:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-24T21:00:00.000Z,
    },
    {
      "end": 2024-06-24T23:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-24T22:00:00.000Z,
    },
    {
      "end": 2024-06-25T00:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
        {
          "lightStatus": 1,
          "queue": "1",
        },
      ],
      "start": 2024-06-24T23:00:00.000Z,
    },
    {
      "end": 2024-06-25T01:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
        {
          "lightStatus": 1,
          "queue": "1",
        },
      ],
      "start": 2024-06-25T00:00:00.000Z,
    },
    {
      "end": 2024-06-25T02:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "2",
        },
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-25T01:00:00.000Z,
    },
    {
      "end": 2024-06-25T03:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "2",
        },
        {
          "lightStatus": 1,
          "queue": "3",
        },
      ],
      "start": 2024-06-25T02:00:00.000Z,
    },
    {
      "end": 2024-06-25T04:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
      ],
      "start": 2024-06-25T03:00:00.000Z,
    },
    {
      "end": 2024-06-25T05:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
      ],
      "start": 2024-06-25T04:00:00.000Z,
    },
    {
      "end": 2024-06-25T06:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "1",
        },
        {
          "lightStatus": 1,
          "queue": "2",
        },
      ],
      "start": 2024-06-25T05:00:00.000Z,
    },
    {
      "end": 2024-06-25T07:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "1",
        },
        {
          "lightStatus": 1,
          "queue": "2",
        },
      ],
      "start": 2024-06-25T06:00:00.000Z,
    },
    {
      "end": 2024-06-25T08:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-25T07:00:00.000Z,
    },
    {
      "end": 2024-06-25T09:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-25T08:00:00.000Z,
    },
    {
      "end": 2024-06-25T10:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
        {
          "lightStatus": 1,
          "queue": "1",
        },
      ],
      "start": 2024-06-25T09:00:00.000Z,
    },
    {
      "end": 2024-06-25T11:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
        {
          "lightStatus": 1,
          "queue": "1",
        },
      ],
      "start": 2024-06-25T10:00:00.000Z,
    },
    {
      "end": 2024-06-25T12:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "2",
        },
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-25T11:00:00.000Z,
    },
    {
      "end": 2024-06-25T13:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "2",
        },
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-25T12:00:00.000Z,
    },
    {
      "end": 2024-06-25T14:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
        {
          "lightStatus": 1,
          "queue": "1",
        },
      ],
      "start": 2024-06-25T13:00:00.000Z,
    },
    {
      "end": 2024-06-25T15:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
        {
          "lightStatus": 1,
          "queue": "1",
        },
      ],
      "start": 2024-06-25T14:00:00.000Z,
    },
    {
      "end": 2024-06-25T16:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "2",
        },
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-25T15:00:00.000Z,
    },
    {
      "end": 2024-06-25T17:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "2",
        },
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-25T16:00:00.000Z,
    },
    {
      "end": 2024-06-25T18:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
        {
          "lightStatus": 1,
          "queue": "1",
        },
      ],
      "start": 2024-06-25T17:00:00.000Z,
    },
    {
      "end": 2024-06-25T19:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
        {
          "lightStatus": 1,
          "queue": "6",
        },
        {
          "lightStatus": 1,
          "queue": "1",
        },
      ],
      "start": 2024-06-25T18:00:00.000Z,
    },
    {
      "end": 2024-06-25T20:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "2",
        },
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-25T19:00:00.000Z,
    },
    {
      "end": 2024-06-25T21:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "3",
        },
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-25T20:00:00.000Z,
    },
  ],
  "type": "schedule",
}
`;

exports[`OutrageParserService parseMessage should return parsed message from real old mock 1`] = `
{
  "date": 2024-06-10T21:00:00.000Z,
  "region": "cherkasy",
  "shifts": [
    {
      "end": 2024-06-11T12:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "2",
        },
      ],
      "start": 2024-06-11T11:00:00.000Z,
    },
    {
      "end": 2024-06-11T13:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "2",
        },
      ],
      "start": 2024-06-11T12:00:00.000Z,
    },
    {
      "end": 2024-06-11T14:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "3",
        },
      ],
      "start": 2024-06-11T13:00:00.000Z,
    },
    {
      "end": 2024-06-11T15:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "3",
        },
      ],
      "start": 2024-06-11T14:00:00.000Z,
    },
    {
      "end": 2024-06-11T16:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-11T15:00:00.000Z,
    },
    {
      "end": 2024-06-11T17:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "4",
        },
      ],
      "start": 2024-06-11T16:00:00.000Z,
    },
    {
      "end": 2024-06-11T18:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
      ],
      "start": 2024-06-11T17:00:00.000Z,
    },
    {
      "end": 2024-06-11T19:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "5",
        },
      ],
      "start": 2024-06-11T18:00:00.000Z,
    },
    {
      "end": 2024-06-11T20:00:00.000Z,
      "queues": [
        {
          "lightStatus": 1,
          "queue": "6",
        },
      ],
      "start": 2024-06-11T19:00:00.000Z,
    },
  ],
  "type": "change",
}
`;

exports[`OutrageParserService parseShifts should return shifts from real new mock 1`] = `
[
  {
    "end": 2024-07-31T22:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-07-31T21:00:00.000Z,
  },
  {
    "end": 2024-07-31T23:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-07-31T22:00:00.000Z,
  },
  {
    "end": 2024-08-01T00:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
      {
        "lightStatus": 1,
        "queue": "1",
      },
    ],
    "start": 2024-07-31T23:00:00.000Z,
  },
  {
    "end": 2024-08-01T01:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
      {
        "lightStatus": 1,
        "queue": "1",
      },
    ],
    "start": 2024-08-01T00:00:00.000Z,
  },
  {
    "end": 2024-08-01T02:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "2",
      },
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T01:00:00.000Z,
  },
  {
    "end": 2024-08-01T03:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "2",
      },
      {
        "lightStatus": 1,
        "queue": "3",
      },
    ],
    "start": 2024-08-01T02:00:00.000Z,
  },
  {
    "end": 2024-08-01T04:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
    ],
    "start": 2024-08-01T03:00:00.000Z,
  },
  {
    "end": 2024-08-01T05:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
    ],
    "start": 2024-08-01T04:00:00.000Z,
  },
  {
    "end": 2024-08-01T06:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "1",
      },
      {
        "lightStatus": 1,
        "queue": "2",
      },
    ],
    "start": 2024-08-01T05:00:00.000Z,
  },
  {
    "end": 2024-08-01T07:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "1",
      },
      {
        "lightStatus": 1,
        "queue": "2",
      },
    ],
    "start": 2024-08-01T06:00:00.000Z,
  },
  {
    "end": 2024-08-01T08:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T07:00:00.000Z,
  },
  {
    "end": 2024-08-01T09:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T08:00:00.000Z,
  },
  {
    "end": 2024-08-01T10:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
      {
        "lightStatus": 1,
        "queue": "1",
      },
    ],
    "start": 2024-08-01T09:00:00.000Z,
  },
  {
    "end": 2024-08-01T11:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
      {
        "lightStatus": 1,
        "queue": "1",
      },
    ],
    "start": 2024-08-01T10:00:00.000Z,
  },
  {
    "end": 2024-08-01T12:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "2",
      },
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T11:00:00.000Z,
  },
  {
    "end": 2024-08-01T13:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "2",
      },
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T12:00:00.000Z,
  },
  {
    "end": 2024-08-01T14:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
      {
        "lightStatus": 1,
        "queue": "1",
      },
    ],
    "start": 2024-08-01T13:00:00.000Z,
  },
  {
    "end": 2024-08-01T15:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
      {
        "lightStatus": 1,
        "queue": "1",
      },
    ],
    "start": 2024-08-01T14:00:00.000Z,
  },
  {
    "end": 2024-08-01T16:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "2",
      },
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T15:00:00.000Z,
  },
  {
    "end": 2024-08-01T17:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "2",
      },
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T16:00:00.000Z,
  },
  {
    "end": 2024-08-01T18:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
      {
        "lightStatus": 1,
        "queue": "1",
      },
    ],
    "start": 2024-08-01T17:00:00.000Z,
  },
  {
    "end": 2024-08-01T19:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
      {
        "lightStatus": 1,
        "queue": "6",
      },
      {
        "lightStatus": 1,
        "queue": "1",
      },
    ],
    "start": 2024-08-01T18:00:00.000Z,
  },
  {
    "end": 2024-08-01T20:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "2",
      },
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T19:00:00.000Z,
  },
  {
    "end": 2024-08-01T21:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "3",
      },
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T20:00:00.000Z,
  },
]
`;

exports[`OutrageParserService parseShifts should return shifts from real old mock 1`] = `
[
  {
    "end": 2024-08-01T12:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "2",
      },
    ],
    "start": 2024-08-01T11:00:00.000Z,
  },
  {
    "end": 2024-08-01T13:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "2",
      },
    ],
    "start": 2024-08-01T12:00:00.000Z,
  },
  {
    "end": 2024-08-01T14:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "3",
      },
    ],
    "start": 2024-08-01T13:00:00.000Z,
  },
  {
    "end": 2024-08-01T15:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "3",
      },
    ],
    "start": 2024-08-01T14:00:00.000Z,
  },
  {
    "end": 2024-08-01T16:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T15:00:00.000Z,
  },
  {
    "end": 2024-08-01T17:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "4",
      },
    ],
    "start": 2024-08-01T16:00:00.000Z,
  },
  {
    "end": 2024-08-01T18:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
    ],
    "start": 2024-08-01T17:00:00.000Z,
  },
  {
    "end": 2024-08-01T19:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "5",
      },
    ],
    "start": 2024-08-01T18:00:00.000Z,
  },
  {
    "end": 2024-08-01T20:00:00.000Z,
    "queues": [
      {
        "lightStatus": 1,
        "queue": "6",
      },
    ],
    "start": 2024-08-01T19:00:00.000Z,
  },
]
`;
